<resources>
    <string name="app_name">Tutorly</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_str">Profile</string>
    <string name="settings_str">Settings</string>
    <string name="home_str">Home</string>
    <string name="scheduled_str">Scheduled</string>
    <string name="requested_str">Requested</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_bio">Short Bio (Tutoring Experience, etc.)</string>
    <string name="prompt_pw_short">Password</string>
    <string name="new_to_tutorly"><u>New to Tutorly? Register Here</u></string>
    <string name="click_to_verify">Email Not Verified (<u>Click to Verify</u>)</string>
    <string name="verification_email_sent">Verification Email Sent</string>
    <string name="years_of_tutoring_experience">Years of tutoring experience</string>
    <string name="become_a_tutor">Become a Tutor</string>
    <string name="brief_description_of_qualifications">Brief description of qualifications</string>
    <string name="class_code">Class Code</string>
    <string name="class_number">Class #</string>
    <string name="add_course">Add Course</string>
    <string name="classes_you_can_tutor_in">Classes you can tutor in:</string>
    <string name="course_title">Course Title</string>
    <string name="class_title">Class Title</string>
    <string name="add_class">Add Class</string>
    <string name="search_for_tutors">Search for Tutors</string>
    <string name="search">Search</string>
    <string name="pay_rate_per_hour">Pay rate per hour</string>
    <string name="with">with</string>
    <string name="request_a_tutoring_session">Request a Tutoring Session</string>
    <string name="select_a_session_date">Select a session date:</string>
    <string name="meeting_location">Meeting Location</string>
    <string name="session_start_time">Session Start Time</string>
    <string name="am_or_pm">AM or PM</string>
    <string name="session_end_time">Session End Time</string>
    <string name="other_details">Other Details</string>

    <string-array name="colleges_array">
        <item>Select One</item>
        <item>University of Alabama</item>
        <item>Auburn University</item>
        <item>Mississippi State University</item>
        <item>Vanderbilt University</item>
        <item>University of Florida</item>
        <item>University of Kentucky</item>
        <item>University of Tennessee</item>
    </string-array>
</resources>