<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profile_item"
        android:title="@string/profile_str"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settings_item"
        android:title="@string/settings_str"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/home_item"
        android:title="@string/home_str"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/scheduled_item"
        android:title="@string/scheduled_str"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/requested_item"
        android:title="@string/requested_str"
        app:showAsAction="ifRoom"/>

</menu>
