<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/become_a_tutor"
            android:textSize="40sp"
            app:fontFamily="sans-serif-black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/short_tutor_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"
                android:hint="@string/brief_description_of_qualifications"
                android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                android:maxLines="5"
                android:minLines="3" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/UserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/classes_you_can_tutor_in"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp">

            <EditText
                android:id="@+id/course_title"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"
                android:hint="@string/class_title"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/class_letters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"
                    android:hint="@string/class_code"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/class_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"
                    android:hint="@string/class_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/AddCourseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/add_class" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/class_list"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="1dp" />

        <Button
            android:id="@+id/RegisterTutorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/become_a_tutor" />

    </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>