<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Search for Tutors"
            android:layout_marginTop="130dp"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/class_code_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"
                    android:hint="@string/class_code"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/class_number_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"
                    android:hint="@string/class_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/searchTutorsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:text="@string/search" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/AdvSearchBtn"
            android:layout_width="209dp"
            android:layout_height="40dp"
            android:text="Advanced Search Options"
            android:layout_marginTop="10dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@layout/my_navigation_items"
            app:labelVisibilityMode="labeled"/>

    </RelativeLayout>

</RelativeLayout>